fixed mobile UI for editing lineup order and for some buttons on profile and user search UI. Also added a viewedUser var in the views for profiles to have better readability for comparing signed user to external users

--- a/public/styles/components/_edit-lineup.scss
+++ b/public/styles/components/_edit-lineup.scss
@@ -20,6 +20,10 @@
     margin-top: 3rem;
   }
 
+  .content-container {
+    display: flex;
+  }
+
   #reorder-lineup-form {
     display: flex;
     flex-direction: column;
@@ -29,7 +33,7 @@
     padding: 1.5rem;
     border-radius: 8px;
     margin-left: 30%;
-    
+
     select {
       height: 3rem;
       background-color: #dfdfdf;
@@ -126,7 +130,7 @@
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+
     a,
     button {
       margin: 2rem;
@@ -137,9 +141,29 @@
     margin: auto;
     padding: 1rem;
     width: auto;
-    
+
     a {
       margin-right: 1rem;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  #edit-lineup {
+    .lineup-card {
+  
+      width: 80vw;
+      padding: 35px 55px 15px 55px;
+
+      /* width: 100%; */
+    }
+    .content-container {
+      flex-direction: column;
+    }
+    #reorder-lineup-form {
+      width: 80%;
+      margin: 1rem auto;
+   
     }
   }
 }
