--- a/public/styles/pages/_user-profile.scss
+++ b/public/styles/pages/_user-profile.scss
@@ -31,13 +31,7 @@
   font-size: 1.5rem;
 }
 
-#gear {
-  font-size: 2rem;
-  cursor: pointer;
-  position: absolute;
-  top: 2.5rem;
-  right: 1rem;
-}
+
 .row {
   display: flex;
   flex-direction: column;
